[package]
name = "flame-war"
version = "0.1.1"
description = "A flame graph generator for Reddit threads. See the depths that a flame-war can go"
authors = ["Andrew Pollack <andrewpkq@gmail.com>"]
license = "MIT"
repository = "https://github.com/andrewpollack/flame-war"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
